[package]
name = "anyrun-macros"
version = "0.1.0"
edition = "2021"
description = "The macro crate used internally by Anyrun and anyrun-plugin"
license = "GPL-3.0"
homepage = "https://github.com/anyrun-org/macros"
repository = "https://github.com/anyrun-org/macros"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
